--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -813,11 +813,15 @@
   "rampOnOff.createRampOnOff.provider": "Provider",
   "rampOnOff.createRampOnOff.banxa": "Banxa",
   "rampOnOff.rampOnOffScreen.rampOnOffTitle": "Exchange ADA",
-  "rampOnOff.resultRampOnOff.congrats": "Congrats🎉 Your ADA will come in a",
+  "rampOnOff.resultRampOnOff.congrats": "Congrats🎉 Your ADA will come in a few minutes",
   "rampOnOff.resultRampOnOff.ADAmountYouGet": "ADA amount you get",
   "rampOnOff.resultRampOnOff.fiatAmountYouGet": "Fiat amount you sell",
   "rampOnOff.resultRampOnOff.goToTransactions": "GO TO TRANSACTIONS",
   "rampOnOff.resultRampOnOff.buySellADATransaction": "Buy ADA/Sell transaction",
   "rampOnOff.resultRampOnOff.descriptionBuySellADATransaction": "Normally the Buy ADA/Sell transaction takes 3-5 of minutes for the order to be fulfilled. However, there are instances where the order cannot be fulfilled instantly because the compliance team can be doing a manual verification of the KYC docs or any other issues.",
-  "rampOnOff.resultRampOnOff.fewMinutes": "few minutes"
+  "rampOnOff.resultRampOnOff.contact": "Contact",
+  "rampOnOff.resultRampOnOff.and": "and",
+  "rampOnOff.resultRampOnOff.customerSupport": "Yoroi Customer Support",
+  "rampOnOff.resultRampOnOff.significant": "if you witnessed any significant transaction delays or errors."
+
 }
