feature(resolver): frontend update

--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -309,11 +309,12 @@
   "components.send.confirmscreen.noActiveCollateral": "You don't have an active collateral utxo",
   "components.send.confirmscreen.fees": "Fees",
   "components.send.confirmscreen.password": "Spending password",
-  "components.send.confirmscreen.receiver": "Receiver",
+  "components.send.confirmscreen.receiver": "Receiver address, ADA Handle or domains",
   "components.send.confirmscreen.sendingModalTitle": "Submitting transaction",
   "components.send.confirmscreen.title": "Send",
   "components.send.listamountstosendscreen.title": "Assets added",
   "components.send.sendscreen.addressInputErrorInvalidAddress": "Please enter a valid address",
+  "components.send.sendscreen.addressInputErrorInvalidDomain": "Please enter a valid domain",
   "components.send.sendscreen.addressInputLabel": "Address",
   "components.send.sendscreen.amountInput.error.assetOverflow": "Maximum value of a token inside a UTXO exceeded (overflow).",
   "components.send.sendscreen.amountInput.error.INVALID_AMOUNT": "Please enter a valid amount",
