--- a/apps/wallet-mobile/translations/messages/src/features/Send/common/strings.json
+++ b/apps/wallet-mobile/translations/messages/src/features/Send/common/strings.json
@@ -4,14 +4,14 @@
     "defaultMessage": "!!!Please enter valid amount",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 68,
+      "line": 69,
       "column": 18,
-      "index": 4284
+      "index": 4343
     },
     "end": {
-      "line": 71,
+      "line": 72,
       "column": 3,
-      "index": 4412
+      "index": 4471
     }
   },
   {
@@ -19,14 +19,14 @@
     "defaultMessage": "!!!Please enter valid amount",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 72,
+      "line": 73,
       "column": 27,
-      "index": 4441
+      "index": 4500
     },
     "end": {
-      "line": 75,
+      "line": 76,
       "column": 3,
-      "index": 4578
+      "index": 4637
     }
   },
   {
@@ -34,14 +34,14 @@
     "defaultMessage": "!!!Amount too large",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 76,
+      "line": 77,
       "column": 13,
-      "index": 4593
+      "index": 4652
     },
     "end": {
-      "line": 79,
+      "line": 80,
       "column": 3,
-      "index": 4707
+      "index": 4766
     }
   },
   {
@@ -49,14 +49,14 @@
     "defaultMessage": "!!!Amount is too low",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 80,
+      "line": 81,
       "column": 11,
-      "index": 4720
+      "index": 4779
     },
     "end": {
-      "line": 83,
+      "line": 84,
       "column": 3,
-      "index": 4833
+      "index": 4892
     }
   },
   {
@@ -64,14 +64,14 @@
     "defaultMessage": "!!!Cannot send less than {minUtxo} {ticker}",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 84,
+      "line": 85,
       "column": 15,
-      "index": 4850
+      "index": 4909
     },
     "end": {
-      "line": 87,
+      "line": 88,
       "column": 3,
-      "index": 4990
+      "index": 5049
     }
   },
   {
@@ -79,14 +79,14 @@
     "defaultMessage": "!!!Amount must be positive",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 88,
+      "line": 89,
       "column": 12,
-      "index": 5004
+      "index": 5063
     },
     "end": {
-      "line": 91,
+      "line": 92,
       "column": 3,
-      "index": 5124
+      "index": 5183
     }
   },
   {
@@ -94,14 +94,14 @@
     "defaultMessage": "!!!Not enough money to make this transaction",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 92,
+      "line": 93,
       "column": 23,
-      "index": 5149
+      "index": 5208
     },
     "end": {
-      "line": 95,
+      "line": 96,
       "column": 3,
-      "index": 5298
+      "index": 5357
     }
   },
   {
@@ -109,14 +109,14 @@
     "defaultMessage": "!!!!Maximum value of a token inside a UTXO exceeded (overflow).",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 96,
+      "line": 97,
       "column": 17,
-      "index": 5317
+      "index": 5376
     },
     "end": {
-      "line": 99,
+      "line": 100,
       "column": 3,
-      "index": 5479
+      "index": 5538
     }
   },
   {
@@ -124,14 +124,44 @@
     "defaultMessage": "!!!Keep some balance for tokens",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 100,
+      "line": 101,
       "column": 30,
-      "index": 5511
+      "index": 5570
     },
     "end": {
-      "line": 103,
+      "line": 104,
       "column": 3,
-      "index": 5621
+      "index": 5680
+    }
+  },
+  {
+    "id": "components.send.sendscreen.walletAddress",
+    "defaultMessage": "!!!Wallet Address",
+    "file": "src/features/Send/common/strings.ts",
+    "start": {
+      "line": 108,
+      "column": 17,
+      "index": 5744
+    },
+    "end": {
+      "line": 111,
+      "column": 3,
+      "index": 5842
+    }
+  },
+  {
+    "id": "components.send.sendscreen.receiver",
+    "defaultMessage": "!!!Receiver",
+    "file": "src/features/Send/common/strings.ts",
+    "start": {
+      "line": 112,
+      "column": 12,
+      "index": 5856
+    },
+    "end": {
+      "line": 115,
+      "column": 3,
+      "index": 5943
     }
   },
   {
@@ -139,14 +169,14 @@
     "defaultMessage": "!!!Fee",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 107,
+      "line": 116,
       "column": 12,
-      "index": 5680
+      "index": 5957
     },
     "end": {
-      "line": 110,
+      "line": 119,
       "column": 3,
-      "index": 5762
+      "index": 6039
     }
   },
   {
@@ -154,14 +184,14 @@
     "defaultMessage": "!!!-",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 111,
+      "line": 120,
       "column": 19,
-      "index": 5783
+      "index": 6060
     },
     "end": {
-      "line": 114,
+      "line": 123,
       "column": 3,
-      "index": 5870
+      "index": 6147
     }
   },
   {
@@ -169,14 +199,14 @@
     "defaultMessage": "!!!Balance after",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 115,
+      "line": 124,
       "column": 21,
-      "index": 5893
+      "index": 6170
     },
     "end": {
-      "line": 118,
+      "line": 127,
       "column": 3,
-      "index": 5980
+      "index": 6257
     }
   },
   {
@@ -184,14 +214,14 @@
     "defaultMessage": "!!!-",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 119,
+      "line": 128,
       "column": 28,
-      "index": 6010
+      "index": 6287
     },
     "end": {
-      "line": 122,
+      "line": 131,
       "column": 3,
-      "index": 6106
+      "index": 6383
     }
   },
   {
@@ -199,14 +229,14 @@
     "defaultMessage": "!!!Checking balance...",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 123,
+      "line": 132,
       "column": 34,
-      "index": 6142
+      "index": 6419
     },
     "end": {
-      "line": 126,
+      "line": 135,
       "column": 3,
-      "index": 6262
+      "index": 6539
     }
   },
   {
@@ -214,14 +244,14 @@
     "defaultMessage": "!!!-",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 127,
+      "line": 136,
       "column": 36,
-      "index": 6300
+      "index": 6577
     },
     "end": {
-      "line": 130,
+      "line": 139,
       "column": 3,
-      "index": 6404
+      "index": 6681
     }
   },
   {
@@ -229,14 +259,14 @@
     "defaultMessage": "!!!Please enter valid address",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 131,
+      "line": 140,
       "column": 35,
-      "index": 6441
+      "index": 6718
     },
     "end": {
-      "line": 134,
+      "line": 143,
       "column": 3,
-      "index": 6569
+      "index": 6846
     }
   },
   {
@@ -244,14 +274,14 @@
     "defaultMessage": "!!!Please enter valid domain",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 135,
+      "line": 144,
       "column": 34,
-      "index": 6605
+      "index": 6882
     },
     "end": {
-      "line": 138,
+      "line": 147,
       "column": 3,
-      "index": 6731
+      "index": 7008
     }
   },
   {
@@ -259,14 +289,14 @@
     "defaultMessage": "!!!Receiver address, ADA Handle or domains",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 139,
+      "line": 148,
       "column": 21,
-      "index": 6754
+      "index": 7031
     },
     "end": {
-      "line": 142,
+      "line": 151,
       "column": 3,
-      "index": 6875
+      "index": 7152
     }
   },
   {
@@ -274,14 +304,14 @@
     "defaultMessage": "!!!Send all assets (including all tokens)",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 143,
+      "line": 152,
       "column": 25,
-      "index": 6902
+      "index": 7179
     },
     "end": {
-      "line": 146,
+      "line": 155,
       "column": 3,
-      "index": 7032
+      "index": 7309
     }
   },
   {
@@ -289,14 +319,14 @@
     "defaultMessage": "!!!Send all {assetId}",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 147,
+      "line": 156,
       "column": 19,
-      "index": 7053
+      "index": 7330
     },
     "end": {
-      "line": 150,
+      "line": 159,
       "column": 3,
-      "index": 7157
+      "index": 7434
     }
   },
   {
@@ -305,14 +335,14 @@
     "defaultMessage": "!!!Domain is not registered",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 151,
+      "line": 160,
       "column": 28,
-      "index": 7187
+      "index": 7464
     },
     "end": {
-      "line": 155,
+      "line": 164,
       "column": 3,
-      "index": 7336
+      "index": 7613
     }
   },
   {
@@ -321,14 +351,14 @@
     "defaultMessage": "!!!No Cardano record found for this domain",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 156,
+      "line": 165,
       "column": 29,
-      "index": 7367
+      "index": 7644
     },
     "end": {
-      "line": 160,
+      "line": 169,
       "column": 3,
-      "index": 7532
+      "index": 7809
     }
   },
   {
@@ -337,29 +367,14 @@
     "defaultMessage": "!!!Domain is not supported",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 161,
+      "line": 170,
       "column": 26,
-      "index": 7560
+      "index": 7837
     },
     "end": {
-      "line": 165,
+      "line": 174,
       "column": 3,
-      "index": 7706
-    }
-  },
-  {
-    "id": "components.send.sendscreen.resolvesTo",
-    "defaultMessage": "!!!Resolves to",
-    "file": "src/features/Send/common/strings.ts",
-    "start": {
-      "line": 166,
-      "column": 14,
-      "index": 7722
-    },
-    "end": {
-      "line": 169,
-      "column": 3,
-      "index": 7814
+      "index": 7983
     }
   },
   {
@@ -367,14 +382,14 @@
     "defaultMessage": "!!!Search tokens",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 170,
+      "line": 175,
       "column": 16,
-      "index": 7832
+      "index": 8001
     },
     "end": {
-      "line": 173,
+      "line": 178,
       "column": 3,
-      "index": 7928
+      "index": 8097
     }
   },
   {
@@ -382,14 +397,14 @@
     "defaultMessage": "!!!Select asset",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 174,
+      "line": 179,
       "column": 20,
-      "index": 7950
+      "index": 8119
     },
     "end": {
-      "line": 177,
+      "line": 182,
       "column": 3,
-      "index": 8039
+      "index": 8208
     }
   },
   {
@@ -397,14 +412,14 @@
     "defaultMessage": "!!!Unknown asset",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 178,
+      "line": 183,
       "column": 16,
-      "index": 8057
+      "index": 8226
     },
     "end": {
-      "line": 181,
+      "line": 186,
       "column": 3,
-      "index": 8162
+      "index": 8331
     }
   },
   {
@@ -412,14 +427,14 @@
     "defaultMessage": "!!!No assets found",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 182,
+      "line": 187,
       "column": 12,
-      "index": 8176
+      "index": 8345
     },
     "end": {
-      "line": 185,
+      "line": 190,
       "column": 3,
-      "index": 8279
+      "index": 8448
     }
   },
   {
@@ -427,14 +442,14 @@
     "defaultMessage": "!!!found",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 186,
+      "line": 191,
       "column": 9,
-      "index": 8290
+      "index": 8459
     },
     "end": {
-      "line": 189,
+      "line": 194,
       "column": 3,
-      "index": 8380
+      "index": 8549
     }
   },
   {
@@ -442,14 +457,14 @@
     "defaultMessage": "!!!You have",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 190,
+      "line": 195,
       "column": 11,
-      "index": 8393
+      "index": 8562
     },
     "end": {
-      "line": 193,
+      "line": 198,
       "column": 3,
-      "index": 8488
+      "index": 8657
     }
   },
   {
@@ -457,14 +472,14 @@
     "defaultMessage": "!!!No {fungible} added yet",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 194,
+      "line": 199,
       "column": 20,
-      "index": 8510
+      "index": 8679
     },
     "end": {
-      "line": 197,
+      "line": 202,
       "column": 3,
-      "index": 8629
+      "index": 8798
     }
   },
   {
@@ -472,14 +487,14 @@
     "defaultMessage": "!!!Do you really want to send all?",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 198,
+      "line": 203,
       "column": 23,
-      "index": 8654
+      "index": 8823
     },
     "end": {
-      "line": 201,
+      "line": 206,
       "column": 3,
-      "index": 8775
+      "index": 8944
     }
   },
   {
@@ -487,14 +502,14 @@
     "defaultMessage": "!!!You have selected the send all option. Please confirm that you understand how this feature works.",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 202,
+      "line": 207,
       "column": 22,
-      "index": 8799
+      "index": 8968
     },
     "end": {
-      "line": 206,
+      "line": 211,
       "column": 3,
-      "index": 8991
+      "index": 9160
     }
   },
   {
@@ -502,14 +517,14 @@
     "defaultMessage": "!!!All you {assetNameOrId} balance will be transferred in this transaction.",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 207,
+      "line": 212,
       "column": 24,
-      "index": 9017
+      "index": 9186
     },
     "end": {
-      "line": 210,
+      "line": 215,
       "column": 3,
-      "index": 9180
+      "index": 9349
     }
   },
   {
@@ -517,14 +532,14 @@
     "defaultMessage": "!!!All your tokens, including NFTs and any other native assets in your wallet, will also be transferred in this transaction.",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 211,
+      "line": 216,
       "column": 24,
-      "index": 9206
+      "index": 9375
     },
     "end": {
-      "line": 216,
+      "line": 221,
       "column": 3,
-      "index": 9435
+      "index": 9604
     }
   },
   {
@@ -532,14 +547,14 @@
     "defaultMessage": "!!!After you confirm the transaction in the next screen, your wallet will be emptied.",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 217,
+      "line": 222,
       "column": 24,
-      "index": 9461
+      "index": 9630
     },
     "end": {
-      "line": 220,
+      "line": 225,
       "column": 3,
-      "index": 9634
+      "index": 9803
     }
   },
   {
@@ -547,14 +562,14 @@
     "defaultMessage": "!!!Continue",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 221,
+      "line": 226,
       "column": 18,
-      "index": 9654
+      "index": 9823
     },
     "end": {
-      "line": 224,
+      "line": 229,
       "column": 3,
-      "index": 9747
+      "index": 9916
     }
   },
   {
@@ -562,14 +577,14 @@
     "defaultMessage": "!!!We are experiencing issues with fetching your current balance. Click to retry.",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 225,
+      "line": 230,
       "column": 27,
-      "index": 9776
+      "index": 9945
     },
     "end": {
-      "line": 228,
+      "line": 233,
       "column": 3,
-      "index": 9948
+      "index": 10117
     }
   },
   {
@@ -577,14 +592,14 @@
     "defaultMessage": "!!!You cannot send a new transaction while an existing one is still pending",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 229,
+      "line": 234,
       "column": 41,
-      "index": 9991
+      "index": 10160
     },
     "end": {
-      "line": 232,
+      "line": 237,
       "column": 3,
-      "index": 10171
+      "index": 10340
     }
   },
   {
@@ -592,14 +607,14 @@
     "defaultMessage": "!!!Transaction submitted",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 233,
+      "line": 238,
       "column": 20,
-      "index": 10193
+      "index": 10362
     },
     "end": {
-      "line": 236,
+      "line": 241,
       "column": 3,
-      "index": 10301
+      "index": 10470
     }
   },
   {
@@ -607,14 +622,14 @@
     "defaultMessage": "!!!Check this transaction in the list of wallet transactions",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 237,
+      "line": 242,
       "column": 19,
-      "index": 10322
+      "index": 10491
     },
     "end": {
-      "line": 240,
+      "line": 245,
       "column": 3,
-      "index": 10465
+      "index": 10634
     }
   },
   {
@@ -622,14 +637,14 @@
     "defaultMessage": "!!!Go to transactions",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 241,
+      "line": 246,
       "column": 21,
-      "index": 10488
+      "index": 10657
     },
     "end": {
-      "line": 244,
+      "line": 249,
       "column": 3,
-      "index": 10594
+      "index": 10763
     }
   },
   {
@@ -637,14 +652,14 @@
     "defaultMessage": "!!!Transaction failed",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 245,
+      "line": 250,
       "column": 17,
-      "index": 10613
+      "index": 10782
     },
     "end": {
-      "line": 248,
+      "line": 253,
       "column": 3,
-      "index": 10715
+      "index": 10884
     }
   },
   {
@@ -652,14 +667,14 @@
     "defaultMessage": "!!!Your transaction has not been processed properly due to technical issues",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 249,
+      "line": 254,
       "column": 16,
-      "index": 10733
+      "index": 10902
     },
     "end": {
-      "line": 252,
+      "line": 257,
       "column": 3,
-      "index": 10888
+      "index": 11057
     }
   },
   {
@@ -667,14 +682,14 @@
     "defaultMessage": "!!!Try again",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 253,
+      "line": 258,
       "column": 18,
-      "index": 10908
+      "index": 11077
     },
     "end": {
-      "line": 256,
+      "line": 261,
       "column": 3,
-      "index": 11002
+      "index": 11171
     }
   },
   {
@@ -682,14 +697,14 @@
     "defaultMessage": "!!!Asset",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 257,
+      "line": 262,
       "column": 9,
-      "index": 11013
+      "index": 11182
     },
     "end": {
-      "line": 260,
+      "line": 265,
       "column": 3,
-      "index": 11086
+      "index": 11255
     }
   },
   {
@@ -697,14 +712,14 @@
     "defaultMessage": "!!!Scan recipients QR code to add a wallet address",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 261,
+      "line": 266,
       "column": 23,
-      "index": 11111
+      "index": 11280
     },
     "end": {
-      "line": 264,
+      "line": 269,
       "column": 3,
-      "index": 11238
+      "index": 11407
     }
   }
 ]
