--- a/apps/wallet-mobile/translations/messages/src/features/Send/common/strings.json
+++ b/apps/wallet-mobile/translations/messages/src/features/Send/common/strings.json
@@ -4,14 +4,14 @@
     "defaultMessage": "!!!Please enter valid amount",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 70,
+      "line": 71,
       "column": 18,
-      "index": 4410
+      "index": 4485
     },
     "end": {
-      "line": 73,
+      "line": 74,
       "column": 3,
-      "index": 4538
+      "index": 4613
     }
   },
   {
@@ -19,14 +19,14 @@
     "defaultMessage": "!!!Please enter valid amount",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 74,
+      "line": 75,
       "column": 27,
-      "index": 4567
+      "index": 4642
     },
     "end": {
-      "line": 77,
+      "line": 78,
       "column": 3,
-      "index": 4704
+      "index": 4779
     }
   },
   {
@@ -34,14 +34,14 @@
     "defaultMessage": "!!!Amount too large",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 78,
+      "line": 79,
       "column": 13,
-      "index": 4719
+      "index": 4794
     },
     "end": {
-      "line": 81,
+      "line": 82,
       "column": 3,
-      "index": 4833
+      "index": 4908
     }
   },
   {
@@ -49,14 +49,14 @@
     "defaultMessage": "!!!Amount is too low",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 82,
+      "line": 83,
       "column": 11,
-      "index": 4846
+      "index": 4921
     },
     "end": {
-      "line": 85,
+      "line": 86,
       "column": 3,
-      "index": 4959
+      "index": 5034
     }
   },
   {
@@ -64,14 +64,14 @@
     "defaultMessage": "!!!Cannot send less than {minUtxo} {ticker}",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 86,
+      "line": 87,
       "column": 15,
-      "index": 4976
+      "index": 5051
     },
     "end": {
-      "line": 89,
+      "line": 90,
       "column": 3,
-      "index": 5116
+      "index": 5191
     }
   },
   {
@@ -79,14 +79,14 @@
     "defaultMessage": "!!!Amount must be positive",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 90,
+      "line": 91,
       "column": 12,
-      "index": 5130
+      "index": 5205
     },
     "end": {
-      "line": 93,
+      "line": 94,
       "column": 3,
-      "index": 5250
+      "index": 5325
     }
   },
   {
@@ -94,14 +94,14 @@
     "defaultMessage": "!!!Not enough money to make this transaction",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 94,
+      "line": 95,
       "column": 23,
-      "index": 5275
+      "index": 5350
     },
     "end": {
-      "line": 97,
+      "line": 98,
       "column": 3,
-      "index": 5424
+      "index": 5499
     }
   },
   {
@@ -109,14 +109,14 @@
     "defaultMessage": "!!!!Maximum value of a token inside a UTXO exceeded (overflow).",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 98,
+      "line": 99,
       "column": 17,
-      "index": 5443
+      "index": 5518
     },
     "end": {
-      "line": 101,
+      "line": 102,
       "column": 3,
-      "index": 5605
+      "index": 5680
     }
   },
   {
@@ -124,14 +124,14 @@
     "defaultMessage": "!!!Keep some balance for tokens",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 102,
+      "line": 103,
       "column": 30,
-      "index": 5637
+      "index": 5712
     },
     "end": {
-      "line": 105,
+      "line": 106,
       "column": 3,
-      "index": 5747
+      "index": 5822
     }
   },
   {
@@ -139,14 +139,14 @@
     "defaultMessage": "!!!Wallet Address",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 109,
+      "line": 110,
       "column": 17,
-      "index": 5811
+      "index": 5886
     },
     "end": {
-      "line": 112,
+      "line": 113,
       "column": 3,
-      "index": 5909
+      "index": 5984
     }
   },
   {
@@ -154,14 +154,14 @@
     "defaultMessage": "!!!Receiver",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 113,
+      "line": 114,
       "column": 12,
-      "index": 5923
+      "index": 5998
     },
     "end": {
-      "line": 116,
+      "line": 117,
       "column": 3,
-      "index": 6010
+      "index": 6085
     }
   },
   {
@@ -169,14 +169,14 @@
     "defaultMessage": "!!!Fee",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 117,
+      "line": 118,
       "column": 12,
-      "index": 6024
+      "index": 6099
     },
     "end": {
-      "line": 120,
+      "line": 121,
       "column": 3,
-      "index": 6106
+      "index": 6181
     }
   },
   {
@@ -184,14 +184,14 @@
     "defaultMessage": "!!!-",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 121,
+      "line": 122,
       "column": 19,
-      "index": 6127
+      "index": 6202
     },
     "end": {
-      "line": 124,
+      "line": 125,
       "column": 3,
-      "index": 6214
+      "index": 6289
     }
   },
   {
@@ -199,14 +199,14 @@
     "defaultMessage": "!!!Balance after",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 125,
+      "line": 126,
       "column": 21,
-      "index": 6237
+      "index": 6312
     },
     "end": {
-      "line": 128,
+      "line": 129,
       "column": 3,
-      "index": 6324
+      "index": 6399
     }
   },
   {
@@ -214,14 +214,14 @@
     "defaultMessage": "!!!-",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 129,
+      "line": 130,
       "column": 28,
-      "index": 6354
+      "index": 6429
     },
     "end": {
-      "line": 132,
+      "line": 133,
       "column": 3,
-      "index": 6450
+      "index": 6525
     }
   },
   {
@@ -229,14 +229,14 @@
     "defaultMessage": "!!!Checking balance...",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 133,
+      "line": 134,
       "column": 34,
-      "index": 6486
+      "index": 6561
     },
     "end": {
-      "line": 136,
+      "line": 137,
       "column": 3,
-      "index": 6606
+      "index": 6681
     }
   },
   {
@@ -244,14 +244,14 @@
     "defaultMessage": "!!!-",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 137,
+      "line": 138,
       "column": 36,
-      "index": 6644
+      "index": 6719
     },
     "end": {
-      "line": 140,
+      "line": 141,
       "column": 3,
-      "index": 6748
+      "index": 6823
     }
   },
   {
@@ -259,14 +259,14 @@
     "defaultMessage": "!!!Please enter valid address",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 141,
+      "line": 142,
       "column": 35,
-      "index": 6785
+      "index": 6860
     },
     "end": {
-      "line": 144,
+      "line": 145,
       "column": 3,
-      "index": 6913
+      "index": 6988
     }
   },
   {
@@ -274,14 +274,14 @@
     "defaultMessage": "!!!Please enter valid domain",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 145,
+      "line": 146,
       "column": 34,
-      "index": 6949
+      "index": 7024
     },
     "end": {
-      "line": 148,
+      "line": 149,
       "column": 3,
-      "index": 7075
+      "index": 7150
     }
   },
   {
@@ -289,14 +289,14 @@
     "defaultMessage": "!!!Receiver address, ADA Handle or domains",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 149,
+      "line": 150,
       "column": 21,
-      "index": 7098
+      "index": 7173
     },
     "end": {
-      "line": 152,
+      "line": 153,
       "column": 3,
-      "index": 7219
+      "index": 7294
     }
   },
   {
@@ -304,14 +304,14 @@
     "defaultMessage": "!!!Send all assets (including all tokens)",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 153,
+      "line": 154,
       "column": 25,
-      "index": 7246
+      "index": 7321
     },
     "end": {
-      "line": 156,
+      "line": 157,
       "column": 3,
-      "index": 7376
+      "index": 7451
     }
   },
   {
@@ -319,14 +319,14 @@
     "defaultMessage": "!!!Send all {assetId}",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 157,
+      "line": 158,
       "column": 19,
-      "index": 7397
+      "index": 7472
     },
     "end": {
-      "line": 160,
+      "line": 161,
       "column": 3,
-      "index": 7501
+      "index": 7576
     }
   },
   {
@@ -335,14 +335,14 @@
     "defaultMessage": "!!!Domain is not registered",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 161,
+      "line": 162,
       "column": 28,
-      "index": 7531
+      "index": 7606
     },
     "end": {
-      "line": 165,
+      "line": 166,
       "column": 3,
-      "index": 7680
+      "index": 7755
     }
   },
   {
@@ -351,14 +351,14 @@
     "defaultMessage": "!!!No Cardano record found for this domain",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 166,
+      "line": 167,
       "column": 29,
-      "index": 7711
+      "index": 7786
     },
     "end": {
-      "line": 170,
+      "line": 171,
       "column": 3,
-      "index": 7876
+      "index": 7951
     }
   },
   {
@@ -367,14 +367,14 @@
     "defaultMessage": "!!!Domain is not supported",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 171,
+      "line": 172,
       "column": 26,
-      "index": 7904
+      "index": 7979
     },
     "end": {
-      "line": 175,
+      "line": 176,
       "column": 3,
-      "index": 8050
+      "index": 8125
     }
   },
   {
@@ -382,14 +382,14 @@
     "defaultMessage": "!!!Search tokens",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 176,
+      "line": 177,
       "column": 16,
-      "index": 8068
+      "index": 8143
     },
     "end": {
-      "line": 179,
+      "line": 180,
       "column": 3,
-      "index": 8164
+      "index": 8239
     }
   },
   {
@@ -397,14 +397,14 @@
     "defaultMessage": "!!!Select asset",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 180,
+      "line": 181,
       "column": 20,
-      "index": 8186
+      "index": 8261
     },
     "end": {
-      "line": 183,
+      "line": 184,
       "column": 3,
-      "index": 8275
+      "index": 8350
     }
   },
   {
@@ -412,14 +412,14 @@
     "defaultMessage": "!!!Unknown asset",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 184,
+      "line": 185,
       "column": 16,
-      "index": 8293
+      "index": 8368
     },
     "end": {
-      "line": 187,
+      "line": 188,
       "column": 3,
-      "index": 8398
+      "index": 8473
     }
   },
   {
@@ -427,14 +427,14 @@
     "defaultMessage": "!!!No assets found",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 188,
+      "line": 189,
       "column": 12,
-      "index": 8412
+      "index": 8487
     },
     "end": {
-      "line": 191,
+      "line": 192,
       "column": 3,
-      "index": 8515
+      "index": 8590
     }
   },
   {
@@ -442,14 +442,14 @@
     "defaultMessage": "!!!found",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 192,
+      "line": 193,
       "column": 9,
-      "index": 8526
+      "index": 8601
     },
     "end": {
-      "line": 195,
+      "line": 196,
       "column": 3,
-      "index": 8616
+      "index": 8691
     }
   },
   {
@@ -457,14 +457,14 @@
     "defaultMessage": "!!!You have",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 196,
+      "line": 197,
       "column": 11,
-      "index": 8629
+      "index": 8704
     },
     "end": {
-      "line": 199,
+      "line": 200,
       "column": 3,
-      "index": 8724
+      "index": 8799
     }
   },
   {
@@ -472,14 +472,14 @@
     "defaultMessage": "!!!No {fungible} added yet",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 200,
+      "line": 201,
       "column": 20,
-      "index": 8746
+      "index": 8821
     },
     "end": {
-      "line": 203,
+      "line": 204,
       "column": 3,
-      "index": 8865
+      "index": 8940
     }
   },
   {
@@ -487,14 +487,14 @@
     "defaultMessage": "!!!Do you really want to send all?",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 204,
+      "line": 205,
       "column": 23,
-      "index": 8890
+      "index": 8965
     },
     "end": {
-      "line": 207,
+      "line": 208,
       "column": 3,
-      "index": 9011
+      "index": 9086
     }
   },
   {
@@ -502,14 +502,14 @@
     "defaultMessage": "!!!You have selected the send all option. Please confirm that you understand how this feature works.",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 208,
+      "line": 209,
       "column": 22,
-      "index": 9035
+      "index": 9110
     },
     "end": {
-      "line": 212,
+      "line": 213,
       "column": 3,
-      "index": 9227
+      "index": 9302
     }
   },
   {
@@ -517,14 +517,14 @@
     "defaultMessage": "!!!All you {assetNameOrId} balance will be transferred in this transaction.",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 213,
+      "line": 214,
       "column": 24,
-      "index": 9253
+      "index": 9328
     },
     "end": {
-      "line": 216,
+      "line": 217,
       "column": 3,
-      "index": 9416
+      "index": 9491
     }
   },
   {
@@ -532,14 +532,14 @@
     "defaultMessage": "!!!All your tokens, including NFTs and any other native assets in your wallet, will also be transferred in this transaction.",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 217,
+      "line": 218,
       "column": 24,
-      "index": 9442
+      "index": 9517
     },
     "end": {
-      "line": 222,
+      "line": 223,
       "column": 3,
-      "index": 9671
+      "index": 9746
     }
   },
   {
@@ -547,14 +547,14 @@
     "defaultMessage": "!!!After you confirm the transaction in the next screen, your wallet will be emptied.",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 223,
+      "line": 224,
       "column": 24,
-      "index": 9697
+      "index": 9772
     },
     "end": {
-      "line": 226,
+      "line": 227,
       "column": 3,
-      "index": 9870
+      "index": 9945
     }
   },
   {
@@ -562,14 +562,14 @@
     "defaultMessage": "!!!Continue",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 227,
+      "line": 228,
       "column": 18,
-      "index": 9890
+      "index": 9965
     },
     "end": {
-      "line": 230,
+      "line": 231,
       "column": 3,
-      "index": 9983
+      "index": 10058
     }
   },
   {
@@ -577,14 +577,14 @@
     "defaultMessage": "!!!We are experiencing issues with fetching your current balance. Click to retry.",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 231,
+      "line": 232,
       "column": 27,
-      "index": 10012
+      "index": 10087
     },
     "end": {
-      "line": 234,
+      "line": 235,
       "column": 3,
-      "index": 10184
+      "index": 10259
     }
   },
   {
@@ -592,14 +592,14 @@
     "defaultMessage": "!!!You cannot send a new transaction while an existing one is still pending",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 235,
+      "line": 236,
       "column": 41,
-      "index": 10227
+      "index": 10302
     },
     "end": {
-      "line": 238,
+      "line": 239,
       "column": 3,
-      "index": 10407
+      "index": 10482
     }
   },
   {
@@ -607,14 +607,14 @@
     "defaultMessage": "!!!Transaction submitted",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 239,
+      "line": 240,
       "column": 20,
-      "index": 10429
+      "index": 10504
     },
     "end": {
-      "line": 242,
+      "line": 243,
       "column": 3,
-      "index": 10537
+      "index": 10612
     }
   },
   {
@@ -622,14 +622,14 @@
     "defaultMessage": "!!!Check this transaction in the list of wallet transactions",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 243,
+      "line": 244,
       "column": 19,
-      "index": 10558
+      "index": 10633
     },
     "end": {
-      "line": 246,
+      "line": 247,
       "column": 3,
-      "index": 10701
+      "index": 10776
     }
   },
   {
@@ -637,14 +637,14 @@
     "defaultMessage": "!!!Go to transactions",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 247,
+      "line": 248,
       "column": 21,
-      "index": 10724
+      "index": 10799
     },
     "end": {
-      "line": 250,
+      "line": 251,
       "column": 3,
-      "index": 10830
+      "index": 10905
     }
   },
   {
@@ -652,14 +652,14 @@
     "defaultMessage": "!!!Transaction failed",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 251,
+      "line": 252,
       "column": 17,
-      "index": 10849
+      "index": 10924
     },
     "end": {
-      "line": 254,
+      "line": 255,
       "column": 3,
-      "index": 10951
+      "index": 11026
     }
   },
   {
@@ -667,14 +667,14 @@
     "defaultMessage": "!!!Your transaction has not been processed properly due to technical issues",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 255,
+      "line": 256,
       "column": 16,
-      "index": 10969
+      "index": 11044
     },
     "end": {
-      "line": 258,
+      "line": 259,
       "column": 3,
-      "index": 11124
+      "index": 11199
     }
   },
   {
@@ -682,14 +682,14 @@
     "defaultMessage": "!!!Try again",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 259,
+      "line": 260,
       "column": 18,
-      "index": 11144
+      "index": 11219
     },
     "end": {
-      "line": 262,
+      "line": 263,
       "column": 3,
-      "index": 11238
+      "index": 11313
     }
   },
   {
@@ -697,14 +697,14 @@
     "defaultMessage": "!!!Asset",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 263,
+      "line": 264,
       "column": 9,
-      "index": 11249
+      "index": 11324
     },
     "end": {
-      "line": 266,
+      "line": 267,
       "column": 3,
-      "index": 11322
+      "index": 11397
     }
   },
   {
@@ -712,14 +712,14 @@
     "defaultMessage": "!!!Scan recipients QR code to add a wallet address",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 267,
+      "line": 268,
       "column": 23,
-      "index": 11347
+      "index": 11422
     },
     "end": {
-      "line": 270,
+      "line": 271,
       "column": 3,
-      "index": 11474
+      "index": 11549
     }
   },
   {
@@ -727,14 +727,29 @@
     "defaultMessage": "!!!Related Address",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 271,
+      "line": 272,
       "column": 19,
-      "index": 11495
+      "index": 11570
     },
     "end": {
-      "line": 274,
+      "line": 275,
       "column": 3,
-      "index": 11596
+      "index": 11671
+    }
+  },
+  {
+    "id": "components.send.sendscreen.resolverNoticeTitle",
+    "defaultMessage": "!!!Yoroi Supports",
+    "file": "src/features/Send/common/strings.ts",
+    "start": {
+      "line": 276,
+      "column": 23,
+      "index": 11696
+    },
+    "end": {
+      "line": 279,
+      "column": 3,
+      "index": 11800
     }
   }
 ]
